# FH-ECE20-shapes

./: CMakeLists.txt  README.md  README.rst
src/: CMakeLists.txt  cuboid.h  point.cpp  point.h  point3d.h  rectangle.cpp  rectangle.h
tests/: CMakeLists.txt  cuboid-suite.cpp  point-suite.cpp  point3d-suite.cpp  rectangle-suite.cpp
